<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/fateacclogo" />

    <TableLayout
        android:id="@+id/layoutTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/rowCareful"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/tvCareful"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/careful"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/spCareful"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fateLadder"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/btnCareful"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Roll" />

            <TextView
                android:id="@+id/tvCarefulResult"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Result"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowClever"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvClever"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clever"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/spClever"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fateLadder"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/btnClever"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roll" />

        <TextView
            android:id="@+id/tvCleverResult"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Result"
            android:gravity="center"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowFlashy"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvFlashy"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashy"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/spFlashy"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fateLadder"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/btnFlashy"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roll" />

        <TextView
            android:id="@+id/tvFlashyResult"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Result"
            android:gravity="center" />
        </TableRow>

        <TableRow
            android:id="@+id/rowForceful"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvForceful"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forceful"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <Spinner
            android:id="@+id/spForceful"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fateLadder"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/btnForceful"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roll" />

        <TextView
            android:id="@+id/tvForcefulResult"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Result"
            android:gravity="center" />
    </TableRow>

        <TableRow
            android:id="@+id/rowQuick"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvQuick"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/spQuick"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fateLadder"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/btnQuick"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Roll" />

            <TextView
                android:id="@+id/tvQuickResult"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Result"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:id="@+id/rowSneaky"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvSneaky"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sneaky"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/spSneaky"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fateLadder"
                android:spinnerMode="dialog"/>

            <Button
                android:id="@+id/btnSneaky"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Roll" />

            <TextView
                android:id="@+id/tvSneakyResult"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Result"
                android:gravity="center" />
        </TableRow>
    </TableLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>